[FIX] Subheading incorrectly aligned

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -47,10 +47,6 @@ td:first-child {
 	border: 1px solid #CCCCCC;
 }
 
-.card div {
-	text-align: center;
-}
-
 #name {
 	font-size: $text-medium;
 	margin: 0 2px;
